[package]
name = "md2adf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Markdown to Atlassian Document Format converter"
keywords = ["markdown", "adf"]
repository = "https://github.com/localghost/md2adf"

[dependencies]
anyhow = "1.0.98"
markdown = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
